alteração no site

--- a/site/index.html
+++ b/site/index.html
@@ -20,8 +20,16 @@
                 <li><a href="#">.ControlTec</a></li>
             </ul>
         </div>
-        <div style="width: 100%; height: 80px"></div>
+        <div style="width: 100%; height: 100px"></div>
         <div class="laboratorio">
+            <div class="cor">
+                <h1>Lorem ipsum dolor sit</h1>
+                
+            </div>
+        </div>
+
+        <div>
+            <h1>Mind6</h1>
         </div>
 
         <div class="footer">
