--- a/site/login.html
+++ b/site/login.html
@@ -14,11 +14,11 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Sobre nós</a></li>
-            <li class="logo"><img src="Logo-MIND6.png" alt=""></li>
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">.ControlTec</a></li>
+            <li class="hover"><a href="#">Sobre nós</a></li>
+            <li class="hover"><a href="#">Contato</a></li>
+            <li class="logo"><a href="index.html"><img src="Logo-MIND6.png" alt=""></a></li>
+            <li class="hover"><a href="#">.ControlTec</a></li>
+            <li class="hover"><a href="login.html">Login</a></li>
         </ul>
     </div>
     <div class="container-login">
