add Equipe em Sobre nós. Pasta Equipe criada

--- a/site/sobre.html
+++ b/site/sobre.html
@@ -25,7 +25,7 @@
             <div class="laboratorio">
                 <div class="cor">
                     <div class="read">
-                        <h1>Quem é a MIND6?</h1>
+                        <h1>Sobre a MIND6</h1>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,8 @@
                     locais
                     em que computadores deixam ou já deixaram de funcionar, elevando altos gastos de manunteção.</p>
 
-                <p>A MIND6 é a primeira empresa de soluções que porta tal sistema nomeado como .ControlTec trazendo
+                <p>A MIND6 é a primeira empresa de soluções que porta tal sistema nomeado como <a
+                        href="ControlTec.html">.ControlTec</a> trazendo
                     grandes
                     funcionalidades sistêmicas com dinamicidade de uso.</p>
 
@@ -47,6 +48,72 @@
                     Santos instrutor e avaliador de Pesquisa e Inovação.</p>
             </div>
         </div>
+
+        <div id="Team">
+            <h1 class="title">Equipe MIND6</h1>
+            <div class="cardsTeam">
+                <div class="card g-1">
+                    <img src="Equipe/Lucas-Felipe.jpeg" alt="">
+                    <h1>Lucas Felipe</h1>
+                    <p>Position: Scrum Master</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="card g-1">
+                    <img src="Equipe/Gustavo-Yudi.jpeg" alt="">
+                    <h1>Gustavo Yudi</h1>
+                    <p>Position: Product Oner (PO)</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="card g-1">
+                    <img src="Equipe/Lucas-Castione.jpeg" alt="">
+                    <h1>Lucas Castione</h1>
+                    <p>Position: TechLid</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="card g-2">
+                    <img src="Equipe/Gabriel-Cardoso.jpeg" alt="">
+                    <h1>Gabriel Cardoso</h1>
+                    <p>Position: Developer and Designer</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="card g-2">
+                    <img src="Equipe/Guilherme-Vicari.jpeg" alt="">
+                    <h1>Guilherme Vicari</h1>
+                    <p>Position: Developer and Designer</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="card g-2">
+                    <img src="Equipe/Cesar-Augusto.jpeg" alt="">
+                    <h1>César Augusto</h1>
+                    <p>Position: Developer and Designer</p>
+
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+
 
         <div class="footer">
             <div class="footer-content">
@@ -103,3 +170,5 @@
     </body>
 
 </html>
+
+<script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
