--- a/site/login.html
+++ b/site/login.html
@@ -16,7 +16,7 @@
         <ul>
             <li class="hover"><a href="#">Sobre nós</a></li>
             <li class="hover"><a href="#">Contato</a></li>
-            <li class="logo"><a href="index.html"><img src="Logo-MIND6.png" alt=""></a></li>
+            <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
             <li class="hover"><a href="#">.ControlTec</a></li>
             <li class="hover"><a href="login.html">Login</a></li>
         </ul>
@@ -41,7 +41,7 @@
     <div class="footer">
         <div class="footer-content">
             <div class="footer-section location">
-                <img src="Logo-MIND6.png" alt="Logo MIND6">
+                <img src="Logos/Logo-MIND6.png" alt="Logo MIND6">
                 <p>
                     BandTec Digital School <br>
                     Rua Haddock Lobo, 595 <br>
