--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/sobre.css">
         <link rel="stylesheet" href="css/menu.css">
-        <link rel="stylesheet" href="css/contato.css">
+        <link rel="stylesheet" href="css/controlTec.css">
+
         <title>MIND6</title>
     </head>
 
@@ -23,55 +23,24 @@
                 </ul>
             </div>
             <div style="width: 100%; height: 100px"></div>
-        </div>
-
-        <div class="contato">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2915877507767!2d-46.66330915889721!3d-23.557968847632676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59d2b063f663%3A0xc567c0d16d0bc582!2sBandtec%20Digital%20School!5e0!3m2!1spt-BR!2sbr!4v1600006438422!5m2!1spt-BR!2sbr"
-                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
-
-            <div class="local">
-                <p>
-                    <span>BandTec Digital School - MIND6</span>
-                    <br>
-                    Endereço: Rua Haddock Lobo, 595 - Cerqueira César, São Paulo - SP 01414-001
-                    <br>
-                    Ponto de Referência: Divina Panela Restaurante
-                </p>
+            <div class="laboratorio">
             </div>
         </div>
 
-        <form id="" method="" onsubmit="">
-            <h1>Envie sua Dúvida a nossa equipe</h1>
+        <div class="infoProject">
+            <div class="project">
+                <p>orem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo
+                    utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
+                    embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,
+                </p>
 
-            <fieldset>
-                <legend>
-                    <h2>Digite seus Dados</h2>
-                </legend>
+                <p>como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se
+                    popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e
+                    mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus
+                    PageMaker.</p>
+            </div>
+        </div>
 
-                <div class="field">
-                    <label for="nome">Nome</label>
-                    <input type="text" name="Nome" required>
-                </div>
-
-                <div class="field">
-                    <label for="email">Email</label>
-                    <input type="email" name="Email" required>
-                </div>
-
-                <div class="field">
-                    <label for="number">Número de celular</label>
-                    <input type="number" name="numCelular">
-                </div>
-
-                <div class="field">
-                    <textarea name="" id="" rows="10" required></textarea>
-                </div>
-            </fieldset>
-
-            <button type="submit" id="btn_entrar">Enviar</button>
-        </form>
 
         <div class="footer">
             <div class="footer-content">
