--- a/site/sobre.html
+++ b/site/sobre.html
@@ -14,8 +14,8 @@
         <div class="fbody">
             <div class="menu">
                 <ul>
-                    <li class="hover"><a href="#">Sobre nós</a></li>
-                    <li class="hover"><a href="#">Contato</a></li>
+                    <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                    <li class="hover"><a href="contato.html">Contato</a></li>
                     <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
                     <li class="hover"><a href="#">.ControlTec</a></li>
                     <li class="hover"><a href="login.html">Login</a></li>
