--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -18,7 +18,7 @@
                     <li class="hover"><a href="sobre.html">Sobre nós</a></li>
                     <li class="hover"><a href="contato.html">Contato</a></li>
                     <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
-                    <li class="hover"><a href="#">.ControlTec</a></li>
+                    <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                     <li class="hover"><a href="login.html">Login</a></li>
                 </ul>
             </div>
