--- a/site/sobre.html
+++ b/site/sobre.html
@@ -65,7 +65,7 @@
                 <div class="card g-1">
                     <img src="Equipe/Gustavo-Yudi.jpeg" alt="">
                     <h1>Gustavo Yudi</h1>
-                    <p>Position: Product Oner (PO)</p>
+                    <p>Position: Product Owner (PO)</p>
 
                     <a href=""><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
