linkando algumas redes sociais

--- a/site/sobre.html
+++ b/site/sobre.html
@@ -57,9 +57,8 @@
                     <h1>Lucas Felipe</h1>
                     <p>Position: Scrum Master</p>
 
-                    <a href=""><i class="fab fa-instagram"></i></a>
-                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/eae.felpx/?hl=pt-br"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/LucasFelpx"><i class="fab fa-github"></i></a>
                 </div>
 
                 <div class="card g-1">
@@ -67,9 +66,8 @@
                     <h1>Gustavo Yudi</h1>
                     <p>Position: Product Owner (PO)</p>
 
-                    <a href=""><i class="fab fa-instagram"></i></a>
-                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/_donyudi/?hl=pt-br"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/gustavoyudi"><i class="fab fa-github"></i></a>
                 </div>
 
                 <div class="card g-1">
@@ -77,9 +75,9 @@
                     <h1>Lucas Castione</h1>
                     <p>Position: TechLid</p>
 
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/castione_dunk/?hl=pt-br"><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/lucas-castione"><i class="fab fa-github"></i></a>
                 </div>
 
                 <div class="card g-2">
@@ -87,9 +85,9 @@
                     <h1>Gabriel Cardoso</h1>
                     <p>Position: Developer and Designer</p>
 
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/biel.cardoso7/?hl=pt-br"><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/GabrielSCardoso"><i class="fab fa-github"></i></a>
                 </div>
 
                 <div class="card g-2">
@@ -97,9 +95,9 @@
                     <h1>Guilherme Vicari</h1>
                     <p>Position: Developer and Designer</p>
 
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/vicarizaum/?hl=pt-br"><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/guilhermeVicari"><i class="fab fa-github"></i></a>
                 </div>
 
                 <div class="card g-2">
@@ -109,7 +107,7 @@
 
                     <a href=""><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/cesar-augusto-alves-barbosa"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
