estilizando a primeira parte do index

--- a/site/index.html
+++ b/site/index.html
@@ -24,8 +24,8 @@
         <div style="width: 100%; height: 100px"></div>
         <div class="laboratorio">
             <div class="cor">
-                <h1>Lorem ipsum dolor sit</h1>
-
+                <h1>A Inovadora empresa de Digital Solutions</h1>
+                <a href="sobre.html"><button>Veja Mais</button></a>
             </div>
         </div>
 
