finalização da home

--- a/site/index.html
+++ b/site/index.html
@@ -30,14 +30,39 @@
         </div>
 
 
-        <h1 class="tituloMind6">Mind6</h1>
+        <h1 class="tituloMind6">Mind6 </h1>
+        <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto o .ControlTec</p>
+        <div class="control">
+            <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
+            <p align=center>sistemas de motinoramento de computadores escolares</p><br><br><br>
+            <a href="controlTec.html">Saiba mais...</a>
+
+        </div>
+        <br><br><br>
+        
 
 
-        <div class="carrosel">
+        <!-- <div class="carrosel">
             <div style="background: cyan" id="img1"></div>
             <div style="background: purple" id="img2"></div>
             <div style="background: yellow" id="img3"></div>
+        </div> -->
+
+        <div class="mvv">
+            <img width="30%" src="img/missao.png" alt="">
+            <b><p align="center">Missão</p></b>
+            <h3>Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</h3>
         </div>
+        <div class="mvv">
+            <img width="30%" src="img/visao.png" alt="">
+            <b><p align="center">Visão</p></b> 
+            <h3>Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito mais. Oferecendo serviços de qualidade  e confiabilidade, almejando o reconhecimento internacional.</h3>
+        </div>
+        <div class="mvv"
+        ><img width="30%"src="img/valor.png" alt="">
+        <b><p align="center">Valores</p></b>
+        <h3>Precisão, Respeito, Ética, transparência, Paixão, inovação.</h3>
+    </div>
 
     </div>
     <div class="footer">
@@ -98,29 +123,29 @@
 
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
 <script>
-    var contador = 0;
-    setInterval(function () {
-        if (contador == 0) {
-            img1.style.background = 'purple';
-            img2.style.background = 'yellow';
-            img3.style.background = 'cyan';
+    // var contador = 0;
+    // setInterval(function () {
+    //     if (contador == 0) {
+    //         img1.style.background = 'purple';
+    //         img2.style.background = 'yellow';
+    //         img3.style.background = 'cyan';
 
-        } else if (contador == 1) {
-            img1.style.background = 'yellow';
-            img2.style.background = 'cyan';
-            img3.style.background = 'purple';
-        } else {
-            img1.style.background = 'cyan';
-            img2.style.background = 'purple';
-            img3.style.background = 'yellow';
+    //     } else if (contador == 1) {
+    //         img1.style.background = 'yellow';
+    //         img2.style.background = 'cyan';
+    //         img3.style.background = 'purple';
+    //     } else {
+    //         img1.style.background = 'cyan';
+    //         img2.style.background = 'purple';
+    //         img3.style.background = 'yellow';
 
-        }
-        contador++;
+    //     }
+    //     contador++;
 
-        if (contador > 2) {
-            contador = 0;
-        }
+    //     if (contador > 2) {
+    //         contador = 0;
+    //     }
 
 
-    }, 2000);
+    // }, 2000);
 </script>
