--- a/site/sobre.html
+++ b/site/sobre.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/sobre.css">
         <link rel="stylesheet" href="css/menu.css">
+        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
         <title>MIND6</title>
     </head>
 
