--- a/site/contato.html
+++ b/site/contato.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/sobre.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/contato.css">
-        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+        <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
         <title>MIND6</title>
     </head>
 
