--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/controlTec.css">
-        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+        <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
 
         <title>MIND6</title>
     </head>
