--- a/site/login.html
+++ b/site/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/login.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
     <title>Login MIND6</title>
 </head>
 
