atualizando titulo das paginas

--- a/site/contato.html
+++ b/site/contato.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/contato.css">
         <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
-        <title>MIND6</title>
+        <title>Contato</title>
     </head>
 
     <body>
