--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/controlTec.css">
         <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
 
-        <title>MIND6</title>
+        <title>.ControlTec</title>
     </head>
 
     <body>
