--- a/site/login.html
+++ b/site/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
-    <title>Login MIND6</title>
+    <title>Faça seu Login</title>
 </head>
 
 <body>
