--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -7,6 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/controlTec.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
 
         <title>.ControlTec</title>
@@ -23,22 +25,41 @@
                     <li class="hover"><a href="login.html">Login</a></li>
                 </ul>
             </div>
-            <div style="width: 100%; height: 100px"></div>
-            <div class="laboratorio">
+            
             </div>
         </div>
 
         <div class="infoProject">
-            <div class="project">
-                <p>orem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo
-                    utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
-                    embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,
-                </p>
+            <div class="project1">
+               <h1>Solução Digital</h1>
+            </div>
+        </div>
 
-                <p>como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se
-                    popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e
-                    mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus
-                    PageMaker.</p>
+        <div class="infoProject2">
+            <div class="project2">
+                <h1>Conheça nosso Projeto</h1>
+                <p>
+                    A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem objetivos de negócios através da adoção de soluções digital.
+                    Oferecemos a solução <b><i>".ControlTec"</i></b> que veio para facilitar e modernizar as máquinas em âmbitos estudantis, com foco na utilização do técnico colaborando em suas 
+                    tomadas de decisões.
+                </p>
+            </div>
+        </div>
+
+        <div class="infoProject3">
+            <div class="project3">
+                <h1>Diferencias</h1>
+                <ul>
+                    <li><i class="fa fa-download" aria-hidden="true"></i><h3>Baixe</h3><p>Adquira nosso produto de Gerenciamento</p></li>
+                    <li><i class="fa fa-tools" aria-hidden="true"></i><h3>Instale</h3><p>Adquira nosso produto de Gerenciamento</p></li>
+                    <li><i class="fa fa-globe" aria-hidden="true"></i><h3>Descubra</h3><p>Adquira nosso produto de Gerenciamento</p></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="infoProject4">
+            <div class="project4">
+                
             </div>
         </div>
 
