--- a/site/contato.html
+++ b/site/contato.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="footer-section redes">
-                    <h1>Siga-nos em Nossa Redes</h1>
+                    <h1>Siga-nos em Nossas Redes</h1>
 
                     <div class="redes-social">
                         <span><i class="fab fa-instagram"></i></span>
