--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -1,155 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/menu.css">
-        <link rel="stylesheet" href="css/controlTec.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-        <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/controlTec.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
 
-        <title>.ControlTec</title>
-    </head>
+    <title>.ControlTec</title>
+</head>
 
-    <body>
-        <div class="fbody">
-            <div class="menu">
-                <ul>
-                    <li class="hover"><a href="sobre.html">Sobre nós</a></li>
-                    <li class="hover"><a href="contato.html">Contato</a></li>
-                    <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
-                    <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
-                    <li class="hover"><a href="login.html">Login</a></li>
-                </ul>
+<body>
+    <div class="fbody">
+        <div class="menu">
+            <div id="bkGroundMenu" class="bgMenu"></div>
+            <ul>
+                <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                <li class="hover"><a href="contato.html">Contato</a></li>
+                <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
+                <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
+                <li class="hover"><a href="login.html">Login</a></li>
+            </ul>
+        </div>
+
+    </div>
+    </div>
+
+    <div class="infoProject">
+        <div class="project1">
+            <h1>Solução Digital</h1>
+        </div>
+    </div>
+
+    <div class="infoProject2">
+        <div class="project2">
+            <h1>Conheça nosso Projeto</h1>
+            <p>
+                A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
+                objetivos de negócios através da adoção de soluções digital.
+                Oferecemos a solução <b><i>".ControlTec"</i></b> que veio para facilitar e modernizar as máquinas em
+                âmbitos estudantis, com foco na utilização do técnico colaborando em suas
+                tomadas de decisões.
+            </p>
+        </div>
+    </div>
+
+    <div class="infoProject3">
+        <div class="project3">
+            <h1>Diferencias</h1>
+            <ul>
+                <li><i class="fa fa-download" aria-hidden="true"></i>
+                    <h3>Baixe</h3>
+                    <p>Adquira nosso produto de Gerenciamento</p>
+                </li>
+                <li><i class="fa fa-tools" aria-hidden="true"></i>
+                    <h3>Instale</h3>
+                    <p>Implemente em sua Instituição</p>
+                </li>
+                <li><i class="fa fa-globe" aria-hidden="true"></i>
+                    <h3>Descubra</h3>
+                    <p>Tenha em suas mãos, o controle</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="infoProject4" id="vantagens">
+        <h1 class="title">Vantagens do Projeto .ControlTec</h1>
+        <div class="project4">
+            <div class="CardVant">
+                <li><i class="fas fa-sliders-h" aria-hidden="true"></i>
+                    <h3>Ágil</h3>
+                    <p>Proporcionamos um serviço mais eficiente, com maior qualidade e velocidade na identificação de
+                        problemas.
+                    </p>
+                </li>
             </div>
 
-        </div>
-        </div>
+            <div class="CardVant">
+                <li><i class="fas fa-rocket" aria-hidden="true"></i>
+                    <h3>Transforme</h3>
+                    <p>Tranformar seu negócio com a .ControlTec e levar a sua instituição modernização de nossa
+                        aplicação</p>
+                </li>
+            </div>
 
-        <div class="infoProject">
-            <div class="project1">
-                <h1>Solução Digital</h1>
+            <div class="CardVant">
+                <li> <i class="fas fa-bullseye" aria-hidden="true"></i>
+                    <h3>Exatidão</h3>
+                    <p>Encontre os impasses dos seus computadores antes que eles cheguem a níveis procupantes.</p>
+                </li>
             </div>
         </div>
+    </div>
 
-        <div class="infoProject2">
-            <div class="project2">
-                <h1>Conheça nosso Projeto</h1>
+
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-section location">
+                <img src="Logos/Logo-MIND6.png" alt="Logo MIND6">
                 <p>
-                    A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
-                    objetivos de negócios através da adoção de soluções digital.
-                    Oferecemos a solução <b><i>".ControlTec"</i></b> que veio para facilitar e modernizar as máquinas em
-                    âmbitos estudantis, com foco na utilização do técnico colaborando em suas
-                    tomadas de decisões.
+                    BandTec Digital School <br>
+                    Rua Haddock Lobo, 595 <br>
+                    Cerqueira César <br>
+                    São Paulo - SP
                 </p>
-            </div>
-        </div>
 
-        <div class="infoProject3">
-            <div class="project3">
-                <h1>Diferencias</h1>
-                <ul>
-                    <li><i class="fa fa-download" aria-hidden="true"></i>
-                        <h3>Baixe</h3>
-                        <p>Adquira nosso produto de Gerenciamento</p>
-                    </li>
-                    <li><i class="fa fa-tools" aria-hidden="true"></i>
-                        <h3>Instale</h3>
-                        <p>Implemente em sua Instituição</p>
-                    </li>
-                    <li><i class="fa fa-globe" aria-hidden="true"></i>
-                        <h3>Descubra</h3>
-                        <p>Tenha em suas mãos, o controle</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="infoProject4" id="vantagens">
-            <h1 class="title">Vantagens do Projeto .ControlTec</h1>
-            <div class="project4">
-                <div class="CardVant">
-                    <li><i class="fas fa-sliders-h" aria-hidden="true"></i>
-                        <h3>Ágil</h3>
-                        <p>Proporcionamos um serviço mais eficiente, com maior qualidade e velocidade na identificação de problemas.
-                        </p>
-                    </li>
+                <div class="mind">
+                    <p>| BandTec e Equipe <span>MIND6</span> |</p>
                 </div>
+            </div>
 
-                <div class="CardVant">
-                    <li><i class="fas fa-rocket" aria-hidden="true"></i>
-                        <h3>Transforme</h3>
-                        <p>Tranformar seu negócio com a .ControlTec e levar a sua instituição modernização de nossa aplicação</p>
-                    </li>
+            <div class="footer-section redes">
+                <h1>Siga-nos em Nossas Redes</h1>
+
+                <div class="redes-social">
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin-in"></i></span>
+                    <span><i class="fab fa-facebook-f"></i></span>
+                    <span><i class="fab fa-twitter"></i></span>
+                    <span><i class="fab fa-google-plus-g"></i></span>
+                    <span><i class="fab fa-discord"></i></span>
                 </div>
+            </div>
 
-                <div class="CardVant">
-                    <li> <i class="fas fa-bullseye" aria-hidden="true"></i>
-                        <h3>Exatidão</h3>
-                        <p>Encontre os impasses dos seus computadores antes que eles cheguem a níveis procupantes.</p>
-                    </li>
+            <div class="footer-section contate">
+                <h1>Contate-nos</h1>
+                <p>
+                    Entre em contato com a nossa equipe e peça <br>
+                    seu sistema de monitoramento ou tire suas dúvidas <br>
+                    com nosso atendentes.
+                </p>
+
+                <div class="contact">
+                    <span><i class="fas fa-mail-bulk"> Mind6Grupo4@bandtec.com.br</i></span>
+                    <span><i class="fab fa-whatsapp"> (11) 99999-9999</i></span>
                 </div>
             </div>
         </div>
 
-
-        <div class="footer">
-            <div class="footer-content">
-                <div class="footer-section location">
-                    <img src="Logos/Logo-MIND6.png" alt="Logo MIND6">
-                    <p>
-                        BandTec Digital School <br>
-                        Rua Haddock Lobo, 595 <br>
-                        Cerqueira César <br>
-                        São Paulo - SP
-                    </p>
-
-                    <div class="mind">
-                        <p>| BandTec e Equipe <span>MIND6</span> |</p>
-                    </div>
-                </div>
-
-                <div class="footer-section redes">
-                    <h1>Siga-nos em Nossas Redes</h1>
-
-                    <div class="redes-social">
-                        <span><i class="fab fa-instagram"></i></span>
-                        <span><i class="fab fa-linkedin-in"></i></span>
-                        <span><i class="fab fa-facebook-f"></i></span>
-                        <span><i class="fab fa-twitter"></i></span>
-                        <span><i class="fab fa-google-plus-g"></i></span>
-                        <span><i class="fab fa-discord"></i></span>
-                    </div>
-                </div>
-
-                <div class="footer-section contate">
-                    <h1>Contate-nos</h1>
-                    <p>
-                        Entre em contato com a nossa equipe e peça <br>
-                        seu sistema de monitoramento ou tire suas dúvidas <br>
-                        com nosso atendentes.
-                    </p>
-
-                    <div class="contact">
-                        <span><i class="fas fa-mail-bulk"> Mind6Grupo4@bandtec.com.br</i></span>
-                        <span><i class="fab fa-whatsapp"> (11) 99999-9999</i></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                &copy; BandTec Digital School | Project MIND6 |
-                Developed and Designed by the MIND6 team
-            </div>
+        <div class="footer-bottom">
+            &copy; BandTec Digital School | Project MIND6 |
+            Developed and Designed by the MIND6 team
         </div>
+    </div>
 
 
 
-    </body>
+</body>
 
 </html>
-
+<script src="menu.js"></script>
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
