--- a/site/login.html
+++ b/site/login.html
@@ -14,6 +14,7 @@
 
 <body>
     <div class="menu">
+        <div id="bkGroundMenu" class="bgMenu"></div>
         <ul>
             <li class="hover"><a href="sobre.html">Sobre nós</a></li>
             <li class="hover"><a href="contato.html">Contato</a></li>
@@ -94,5 +95,5 @@
 </body>
 
 </html>
-
+<script src="menu.js"></script>
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
