--- a/site/index.html
+++ b/site/index.html
@@ -13,16 +13,16 @@
 
 <body>
     <div class="fbody">
-        <div class="menu">
+        <div class="menu" id="main_menu">
+            <div id="bkGroundMenu" class="bgMenu"></div>
             <ul>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
-                <li class="hover"><a href="contato.html">Contato</a></li>
+                <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
                 <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
-                <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
+                <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="login.html">Login</a></li>
             </ul>
         </div>
-        <div style="width: 100%; height: 100px"></div>
         <div class="laboratorio">
             <div class="cor">
                 <h1>A Inovadora empresa de Digital Solutions</h1>
@@ -32,7 +32,8 @@
 
 
         <h1 class="tituloMind6">Mind6 </h1>
-        <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto o .ControlTec</p>
+        <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto o
+            .ControlTec</p>
         <div class="control">
             <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
             <p align=center>sistemas de motinoramento de computadores escolares</p><br><br><br>
@@ -40,7 +41,7 @@
 
         </div>
         <br><br><br>
-        
+
 
 
         <!-- <div class="carrosel">
@@ -51,19 +52,25 @@
 
         <div class="mvv">
             <img width="30%" src="img/missao.png" alt="">
-            <b><p align="center">Missão</p></b>
+            <b>
+                <p align="center">Missão</p>
+            </b>
             <h3>Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</h3>
         </div>
         <div class="mvv">
             <img width="30%" src="img/visao.png" alt="">
-            <b><p align="center">Visão</p></b> 
-            <h3>Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito mais. Oferecendo serviços de qualidade  e confiabilidade, almejando o reconhecimento internacional.</h3>
+            <b>
+                <p align="center">Visão</p>
+            </b>
+            <h3>Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
+                mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.</h3>
         </div>
-        <div class="mvv"
-        ><img width="30%"src="img/valor.png" alt="">
-        <b><p align="center">Valores</p></b>
-        <h3>Precisão, Respeito, Ética, transparência, Paixão, inovação.</h3>
-    </div>
+        <div class="mvv"><img width="30%" src="img/valor.png" alt="">
+            <b>
+                <p align="center">Valores</p>
+            </b>
+            <h3>Precisão, Respeito, Ética, transparência, Paixão, inovação.</h3>
+        </div>
 
     </div>
     <div class="footer">
@@ -123,6 +130,7 @@
 </html>
 
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
+<script src="menu.js"></script>
 <script>
     // var contador = 0;
     // setInterval(function () {
