site quase arrumado

--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -145,7 +145,7 @@
 
         <div class="footer-bottom">
             &copy; BandTec Digital School | Project MIND6 |
-            Developed and Designed by the MIND6 team
+            Developed and Designed by MIND6's team
         </div>
     </div>
 
