--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
@@ -36,7 +37,7 @@
             .ControlTec</p>
         <div class="control">
             <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
-            <p align=center>sistemas de motinoramento de computadores escolares</p><br><br><br>
+            <p align=center>Sistema de monitoramento de computadores escolares</p><br><br><br>
             <a href="controlTec.html">Saiba mais...</a>
 
         </div>
