--- a/site/index.html
+++ b/site/index.html
@@ -31,18 +31,18 @@
             </div>
         </div>
 
+        <div class="content">
+            <h1 class="tituloMind6">Mind6 </h1>
+            <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto
+                o
+                .ControlTec</p>
+            <div class="control">
+                <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
+                <p align=center>Sistema de monitoramento de computadores escolares</p><br><br><br>
+                <a href="controlTec.html">Saiba mais...</a>
 
-        <h1 class="tituloMind6">Mind6 </h1>
-        <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto o
-            .ControlTec</p>
-        <div class="control">
-            <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
-            <p align=center>Sistema de monitoramento de computadores escolares</p><br><br><br>
-            <a href="controlTec.html">Saiba mais...</a>
-
+            </div>
         </div>
-        <br><br><br>
-
 
 
         <!-- <div class="carrosel">
@@ -51,27 +51,7 @@
             <div style="background: yellow" id="img3"></div>
         </div> -->
 
-        <div class="mvv">
-            <img width="30%" src="img/missao.png" alt="">
-            <b>
-                <p align="center">Missão</p>
-            </b>
-            <h3>Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</h3>
-        </div>
-        <div class="mvv">
-            <img width="30%" src="img/visao.png" alt="">
-            <b>
-                <p align="center">Visão</p>
-            </b>
-            <h3>Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
-                mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.</h3>
-        </div>
-        <div class="mvv"><img width="30%" src="img/valor.png" alt="">
-            <b>
-                <p align="center">Valores</p>
-            </b>
-            <h3>Precisão, Respeito, Ética, transparência, Paixão, inovação.</h3>
-        </div>
+
 
     </div>
     <div class="footer">
