Alterando MVV e inicializando alterações nos formularios

--- a/site/contato.html
+++ b/site/contato.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <div class="fbody">
         <div class="menu">
             <div id="bkGroundMenu" class="bgMenu"></div>
@@ -43,38 +44,38 @@
             </p>
         </div>
     </div>
+    <div class="container_form">
+        <form id="" method="" onsubmit="">
+            <h1>Envie sua Dúvida a nossa equipe</h1>
 
-    <form id="" method="" onsubmit="">
-        <h1>Envie sua Dúvida a nossa equipe</h1>
+            <fieldset>
+                <legend>
+                    <h2>Digite seus Dados</h2>
+                </legend>
 
-        <fieldset>
-            <legend>
-                <h2>Digite seus Dados</h2>
-            </legend>
+                <div class="field">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="Nome" required>
+                </div>
 
-            <div class="field">
-                <label for="nome">Nome</label>
-                <input type="text" name="Nome" required>
-            </div>
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="email" name="Email" required>
+                </div>
 
-            <div class="field">
-                <label for="email">Email</label>
-                <input type="email" name="Email" required>
-            </div>
+                <div class="field">
+                    <label for="number">Número de celular</label>
+                    <input type="number" name="numCelular">
+                </div>
 
-            <div class="field">
-                <label for="number">Número de celular</label>
-                <input type="number" name="numCelular">
-            </div>
+                <div class="field">
+                    <textarea name="" id="" rows="10" required></textarea>
+                </div>
+            </fieldset>
 
-            <div class="field">
-                <textarea name="" id="" rows="10" required></textarea>
-            </div>
-        </fieldset>
-
-        <button type="submit" id="btn_entrar">Enviar</button>
-    </form>
-
+            <button type="submit" id="btn_entrar">Enviar</button>
+        </form>
+    </div>
     <div class="footer">
         <div class="footer-content">
             <div class="footer-section location">
