--- a/site/sobre.html
+++ b/site/sobre.html
@@ -57,25 +57,24 @@
     </div>
   </div>
   <div class="mvv">
-    <img width="30%" src="img/missao.png" alt="">
-    <b>
-      <p align="center">Missão</p>
-    </b>
-    <h3>Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</h3>
-  </div>
-  <div class="mvv">
-    <img width="30%" src="img/visao.png" alt="">
-    <b>
-      <p align="center">Visão</p>
-    </b>
-    <h3>Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
-      mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.</h3>
-  </div>
-  <div class="mvv"><img width="30%" src="img/valor.png" alt="">
-    <b>
-      <p align="center">Valores</p>
-    </b>
-    <h3>Precisão, Respeito, Ética, transparência, Paixão, inovação.</h3>
+    <div class="missao">
+      <img src="img/missao.png" alt="">
+      <h3 class="titulo_mvv">Missão</h3>
+      <p class="txt_mvv">Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</p>
+    </div>
+    <div class="visao">
+      <img src="img/visao.png" alt="">
+      <h3 class="titulo_mvv">Visão</h3>
+      <p class="txt_mvv">
+        Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
+        mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.
+      </p>
+    </div>
+    <div class="valores">
+      <img src="img/valor.png" alt="">
+      <h3 class="titulo_mvv">Valores</h3>
+      <p class="txt_mvv">Precisão, Respeito, Ética, transparência, Paixão, inovação.</p>
+    </div>
   </div>
 
   <div id="Team">
